typescript/checker/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts.stderr
error: UndefinedSymbol {
    sym: Atom('model' type=inline),
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts:1:1
  |
1 | model.rotate(0, rotateY * Math.PI / 180, rotateZ * Math.PI / 180);
  | ^^^^^

error: UndefinedSymbol {
    sym: Atom('rotateY' type=inline),
    span: Span {
        lo: BytePos(
            16,
        ),
        hi: BytePos(
            23,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts:1:17
  |
1 | model.rotate(0, rotateY * Math.PI / 180, rotateZ * Math.PI / 180);
  |                 ^^^^^^^

error: UndefinedSymbol {
    sym: Atom('rotateZ' type=inline),
    span: Span {
        lo: BytePos(
            41,
        ),
        hi: BytePos(
            48,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts:1:42
  |
1 | model.rotate(0, rotateY * Math.PI / 180, rotateZ * Math.PI / 180);
  |                                          ^^^^^^^

